--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="grid"></div>
         </div>
         <div id="score">
-            <span id="player1"></span>
-            <span id="tie"></span>
-            <span id="player2"></span>
+            <span id="player1">player1</span>
+            <span id="tie">tie</span>
+            <span id="player2">player2</span>
         </div>
     </div>
    
