add score panel include css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="mainBoard">
         <div id="newGame">
             <button id="newGameButton">NEW GAME</button>
-            <div id="playerChange">1 player</div>
+            <div id="playerChange">player or computer</div>
         </div>
         <div id="gameboard">
             <div class="grid"></div>
@@ -25,9 +25,18 @@
             <div class="grid"></div>
         </div>
         <div id="score">
-            <span id="player1">player1</span>
-            <span id="tie">tie</span>
-            <span id="player2">player2</span>
+            <span id="player1">
+                Player 1
+                <div>1</div>
+            </span>
+            <span id="tie">
+                Tie
+                <div>2</div>
+            </span>
+            <span id="player2">
+                Player 2
+                <div>3</div>
+            </span>
         </div>
     </div>
    
