added an onclick function to the newGame button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="mainBoard">
         <div id="newGame">
-            <button id="newGameButton">NEW GAME</button>
+            <button id="newGameButton" onclick="newGame()">NEW GAME</button>
             <div id="playerChange">player or computer</div>
         </div>
         <div id="gameboard">
